8-ingress/api-services-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ad.datadoghq.com/user-service.logs: '[{"source":"user-service","service":"user-service"}{"source":"movie-service","service":"movie-service"}]'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /user-service/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 9400
          - path: /movie-service/?(.*)
            pathType: Prefix
            backend:
              service:
                name: movie-service
                port:
                  number: 9200
